Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ section {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 40px;
+}
+.align-center {
 	align-items: center;
 }
 
